--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,6 +18,7 @@ jobs:
       - name: Build front
         run: |
           npm install
+          npm audit fix
           npm run build
 
       - name: Configure AWS credentials
